# sdl3wgpu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini  readme.md
include/: debug_gui.hpp  webgpu_core.hpp
libs/emscripten/: emscripten_mainloop_stub.h
src/: CMakeLists.txt  debug_gui.cpp  main.cpp  webgpu_core.cpp
vendors/: CMakeLists.txt
vendors/dawn/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
vendors/sdl/: CMakeLists.txt
